[gd_scene load_steps=2 format=3 uid="uid://b4nmmlsklqy2u"]

[ext_resource type="Script" path="res://scripts/fielded_body.gd" id="1_e8mrk"]

[node name="FieldedBody" type="Area3D"]
collision_mask = 2
script = ExtResource("1_e8mrk")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
